syntax = "proto3";

package io.users.doctor.api;

option java_outer_classname = "DoctorApi";

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "kalix/annotations.proto";
import "io/users/doctor/domain/doctor_domain.proto";

service DoctorService {
    option (kalix.codegen) = {
      value_entity: {
        name: "io.users.doctor.domain.Doctor"
        entity_type: "doctors"
        state: "io.users.doctor.domain.DoctorState"
      }
    };
  
    rpc CreateDoctor(Doctor) returns (google.protobuf.Empty) {
        option (google.api.http) = {
            post: "/create_doctor"
            body: "*"
        };
    }

    rpc GetDoctor(GetDoctorRequest) returns (Doctor) {
        option (google.api.http) = {
            post: "/get_doctor"
            body: "*"
        };
    }

    rpc UpdateDoctor(doctor.api.Doctor) returns (google.protobuf.Empty);
}

message Doctor {
    string id = 1;
    string email = 2 [(kalix.field).entity_key = true];
    string password = 3;
    string first_name = 4;
    string last_name = 5;
    string role = 6;
    // Doctor
    string gender = 7;
    string mobile = 8;
    string designation = 9;
    string department = 10;
    string address = 11;
    string date_of_birth = 12;
    string education = 13;
    string img = 14;
    string specialization = 15;
    string degree = 16;
    string joining_date = 17;
}

message GetDoctorRequest {
    string email = 1 [(kalix.field).entity_key = true];
}

// message UpdateDoctorRequest {
//     string id = 1 [(kalix.field).entity_key = true];
//     string first_name = 2;
//     string last_name = 3;
//     string role = 4;
//     // Doctor
//     string gender = 5;
//     string mobile = 6;
//     string designation = 7;
//     string department = 8;
//     string address = 9;
//     string date_of_birth = 10;
//     string education = 11;
//     string img = 12;
//     string specialization = 13;
//     string degree = 14;
//     string joining_date = 15;
// }