syntax = "proto3";

package io.users.doctor.domain;

option java_outer_classname = "DoctorDomain";

message DoctorState {
    string id = 1;
    string email = 2;
    string password = 3;
    string first_name = 4;
    string last_name = 5;
    string role = 6;
    // Doctor
    string gender = 7;
    string mobile = 8;
    string designation = 9;
    string department = 10;
    string address = 11;
    string date_of_birth = 12;
    string education = 13;
    string img = 14;
    string specialization = 15;
    string degree = 16;
    string joining_date = 17;
}